<resources>
    <string name="app_name">FarmRegistration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farm_register">Farm Register</string>
    <string name="enter_authors_name">Enter Author\'s Name</string>
    <string name="add">Add</string>
    <string name="add_new_author">Add New Author</string>
    <string name="error_field_required">This Field Required</string>
    <string name="farm_details_added">Farm Details Successfully Added</string>
    <string name="error">Error: %1$s</string>
    <string name="edit_author">Edit Author</string>
    <string name="update">Update</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="all_farmers">All Farmers</string>
    <string name="logout">Logout</string>
    <string name="add_new_farm">ADD NEW FARM</string>
    <string name="onboard_new_farmer">Onboard New Farmer</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="male_female">Male/Female</string>
    <string name="enter_farm_name">Enter Farm Name</string>
    <string name="enter_farm_address">Enter Farm Address</string>
    <string name="enter_farm_size">Enter farm size</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="dashboard">Dashboard</string>
    <string name="test_agromall">Test@Agromall</string>
    <string name="profile_pic">Profile pic</string>
    <string name="_0815">0815 *** **</string>
    <string name="total_farmers_number">18</string>
    <string name="total_farmers">Farmers</string>
    <string name="total_farm_numbers">125</string>
    <string name="total_farms">Farms</string>
    <string name="random">18</string>
    <string name="browse_inactive">(Inactive)</string>
    <string name="others">Others</string>
    <string name="situation">Situation</string>
    <string name="lagos">Lagos</string>
    <string name="colections">Colections</string>
    <string name="settings_drawable">settings drawable</string>
    <string name="settings">Settings</string>
    <string name="safety">Safety</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="farm_details">FARM DETAILS</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="farm_name">Farm Name :</string>
    <string name="farm_location">Farm Location</string>
    <string name="farm_size_m_2">Farm Size (m^2)</string>
    <string name="view_location_on_map">VIEW LOCATION ON MAP</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_image_title">Select Image How?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_back_body">Are you sure you want to discard changes?</string>
    <string name="toast_no_camera">No camera was found on this device</string>
    <string name="toast_camera_cancelled">No picture taken</string>
    <string name="toast_gallery_cancelled">No picture was selected</string>
    <string name="toast_all_contacts_deleted">All in-app contacts were deleted</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_title_single">It\'s someone\'s birthday today!</string>
    <string name="notification_title_multi">Your contacts have birthdays today!</string>

</resources>
