<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.farmRegFragments.FarmDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/farmer_image"
        android:background="@drawable/ic_boy"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="90dp"/>



    <TextView
        android:id="@+id/farmer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:layout_gravity="center"
        android:text="ade"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
        </LinearLayout>



    <TextView
        android:id="@+id/farmer_dob_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/date_of_birth"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farmer_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="1/2/1996"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farmer_phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/phone_number"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farmer_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="08033217265"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farm_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/farm_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farm_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="agip farms"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farm_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/farm_location"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farm_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="Ikoyi, Lagos"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/farm_size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/farm_size_m_2"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/farm_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="50 m^2"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />


    <Button
        android:id="@+id/nav_to_map_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/view_location_on_map"
        android:textColor="@android:color/white" />

</LinearLayout>